<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="reset">Reset all</string>
    <string name="last_activity">Last activity time</string>
    <string name="dont_lose_bonus">You should launch the game if you want to get bonus points</string>
    <string name="you_got_bonus">You have got bonus points</string>
    <string name="you_didnt_get_points">You was inactive last time and lost bonus points</string>
    <string name="total_points">Total points:  </string>
    <string name="undefined">undefined</string>
    <string name="start_time">Start time</string>
    <string name="period">Period</string>
    <string name="prenotify">Time between notify and alarm</string>
    <string name="is_enabled">Is enabled</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

</resources>